src/objects/Field_Order__c.object
<CustomObject>
    <fields>
        <fullName>AMC_Service_Package__c</fullName>
        <formula>TEXT(Case__r.AMC_Service_Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMC Service Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(Case__r.Application_for_Business_Customer__c = TRUE, Case__r.Account.Name, Case__r.First_Name__c + &quot; &quot; +  Case__r.Middle_Name__c + &quot; &quot; +  Case__r.Last_Name__c)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_text__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Distribution_Facilities_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional Facilities Required</description>
        <inlineHelpText>Additional Facilities Required</inlineHelpText>
        <label>Additional Facilities Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Documents_for_Evaluation_Requ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional documents for evaluation required</description>
        <inlineHelpText>Additional documents for evaluation required</inlineHelpText>
        <label>Additional Docs for Eval Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <formula>Case__r.CXE_Service_Address__c</formula>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barangay__c</fullName>
        <formula>TEXT( Case__r.Service_Address_Barangay__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barangay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Relationship_to_the_Customer__c</fullName>
        <label>Relationship to the Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Rep_Email__c</fullName>
        <label>Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CXE_Rep_First_Name__c</fullName>
        <label>Rep First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Rep_Last_Name__c</fullName>
        <label>Rep Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Rep_Middle_Name__c</fullName>
        <label>Rep Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Rep_Primary_Contact_Number__c</fullName>
        <label>Rep Primary Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CXE_SIN_Termination_Date__c</fullName>
        <label>SIN Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Service_Supply_Phase__c</fullName>
        <label>Service Supply Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Network</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Service_Supply_Type__c</fullName>
        <label>Service Supply Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal with meter</fullName>
                </value>
                <value>
                    <fullName>Streetlight with meter</fullName>
                </value>
                <value>
                    <fullName>Normal without meter</fullName>
                </value>
                <value>
                    <fullName>Temporary with meter</fullName>
                </value>
                <value>
                    <fullName>Streetlight without meter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Service_Supply_Voltage__c</fullName>
        <label>Service Supply Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>69/39 kV</fullName>
                </value>
                <value>
                    <fullName>115/66 kV</fullName>
                </value>
                <value>
                    <fullName>6.24/3.60 kV</fullName>
                </value>
                <value>
                    <fullName>13.2/7.62 kV</fullName>
                </value>
                <value>
                    <fullName>13.8/7.97 kV</fullName>
                </value>
                <value>
                    <fullName>34.5/19.92 kV</fullName>
                </value>
                <value>
                    <fullName>216 V</fullName>
                </value>
                <value>
                    <fullName>230 V</fullName>
                </value>
                <value>
                    <fullName>460/265 V</fullName>
                </value>
                <value>
                    <fullName>400/230 V</fullName>
                </value>
                <value>
                    <fullName>4.8 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Service_Wire_Phase__c</fullName>
        <label>Service Wire Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Network</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Service_Wire_Voltage__c</fullName>
        <label>Service Wire Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>69/39 kV</fullName>
                </value>
                <value>
                    <fullName>115/66 kV</fullName>
                </value>
                <value>
                    <fullName>6.24/3.60 kV</fullName>
                </value>
                <value>
                    <fullName>13.2/7.62 kV</fullName>
                </value>
                <value>
                    <fullName>13.8/7.97 kV</fullName>
                </value>
                <value>
                    <fullName>34.5/19.92 kV</fullName>
                </value>
                <value>
                    <fullName>216 V</fullName>
                </value>
                <value>
                    <fullName>230 V</fullName>
                </value>
                <value>
                    <fullName>460/265 V</fullName>
                </value>
                <value>
                    <fullName>400/230 V</fullName>
                </value>
                <value>
                    <fullName>4.8 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <formula>Case__r.Application_Number_External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Field Orders</relationshipLabel>
        <relationshipName>Field_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City_Municipality__c</fullName>
        <formula>TEXT( Case__r.Service_Address_City_Municiple__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City / Municipality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Metering_Scheme__c</fullName>
        <label>Code Metering Scheme</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Mode_of_Retrieval__c</fullName>
        <label>Code Mode of Retrieval</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Case__r.First_Name__c + &quot; &quot; +  Case__r.Middle_Name__c + &quot; &quot; +  Case__r.Last_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Unreachable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact person unreachable</description>
        <inlineHelpText>Contact person unreachable</inlineHelpText>
        <label>Contact Person Unreachable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedBy_User__c</fullName>
        <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>Customer&apos;s email of related Service Application</description>
        <inlineHelpText>Customer&apos;s email of related Service Application</inlineHelpText>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deliver_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document to be delivered</description>
        <inlineHelpText>Document to be delivered</inlineHelpText>
        <label>Deliver Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_for_Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delivery for reschedule</description>
        <inlineHelpText>Delivery for reschedule</inlineHelpText>
        <label>For re-scheduling of meter base delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Case__r.Email_Address__c</formula>
        <label>Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executing_Personnel_FO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executing Personnel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Field Orders</relationshipLabel>
        <relationshipName>Field_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executing_Personnel_Name__c</fullName>
        <label>Executing Personnel Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Executing_Personnel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JULITO ANDRES</fullName>
                </value>
                <value>
                    <fullName>PERCIVAL ESTRABO</fullName>
                </value>
                <value>
                    <fullName>JOSELITO ARCEO</fullName>
                </value>
                <value>
                    <fullName>EDWARD SIMON IBARROLA</fullName>
                </value>
                <value>
                    <fullName>SHANLIE PATAG</fullName>
                </value>
                <value>
                    <fullName>NICSON MANGUERA</fullName>
                </value>
                <value>
                    <fullName>TRANQUILINO JR SOLOMON</fullName>
                </value>
                <value>
                    <fullName>RONALDO BORJA</fullName>
                </value>
                <value>
                    <fullName>JOEL PUCIO</fullName>
                </value>
                <value>
                    <fullName>MARLON OCAMPO</fullName>
                </value>
                <value>
                    <fullName>ERNESTO III FERRER</fullName>
                </value>
                <value>
                    <fullName>ORLANDO CAPISTRANO</fullName>
                </value>
                <value>
                    <fullName>MARK ARGELO BUSTAMANTE</fullName>
                </value>
                <value>
                    <fullName>BASILIO JR JACINTO</fullName>
                </value>
                <value>
                    <fullName>RONEL DELA CRUZ</fullName>
                </value>
                <value>
                    <fullName>ROWELL PUNZALAN</fullName>
                </value>
                <value>
                    <fullName>RAYMUNDO PALENTINOS</fullName>
                </value>
                <value>
                    <fullName>ROLANDO MALILLIN</fullName>
                </value>
                <value>
                    <fullName>RICHARD SAN PEDRO</fullName>
                </value>
                <value>
                    <fullName>GLENN SUMANG</fullName>
                </value>
                <value>
                    <fullName>ROMEO JR ENCILA</fullName>
                </value>
                <value>
                    <fullName>ALVIN FRANCIS FLORES</fullName>
                </value>
                <value>
                    <fullName>EDBRYAN VELASCO</fullName>
                </value>
                <value>
                    <fullName>REYNALYN REÑON</fullName>
                </value>
                <value>
                    <fullName>ERIC GOZUM</fullName>
                </value>
                <value>
                    <fullName>JOSE MARI SONZA</fullName>
                </value>
                <value>
                    <fullName>JONALD MACARAEG</fullName>
                </value>
                <value>
                    <fullName>LEONARD RENZ LIWANAGAN</fullName>
                </value>
                <value>
                    <fullName>JER KING BONDOC</fullName>
                </value>
                <value>
                    <fullName>ARIEL LEONAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executing_Personnel__c</fullName>
        <label>Executing Personnel BC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANGONO</fullName>
                </value>
                <value>
                    <fullName>CAINTA</fullName>
                </value>
                <value>
                    <fullName>ESPAÑA</fullName>
                </value>
                <value>
                    <fullName>MAKATI</fullName>
                </value>
                <value>
                    <fullName>MALATE</fullName>
                </value>
                <value>
                    <fullName>MANDALUYONG</fullName>
                </value>
                <value>
                    <fullName>MARIKINA</fullName>
                </value>
                <value>
                    <fullName>MASINAG</fullName>
                </value>
                <value>
                    <fullName>PASAY</fullName>
                </value>
                <value>
                    <fullName>PASIG</fullName>
                </value>
                <value>
                    <fullName>TUTUBAN</fullName>
                </value>
                <value>
                    <fullName>BALAGTAS</fullName>
                </value>
                <value>
                    <fullName>BALINTAWAK</fullName>
                </value>
                <value>
                    <fullName>BALIWAG</fullName>
                </value>
                <value>
                    <fullName>CALOOCAN</fullName>
                </value>
                <value>
                    <fullName>CAMARIN</fullName>
                </value>
                <value>
                    <fullName>COMMONWEALTH</fullName>
                </value>
                <value>
                    <fullName>KAMUNING</fullName>
                </value>
                <value>
                    <fullName>MALABON</fullName>
                </value>
                <value>
                    <fullName>MALOLOS</fullName>
                </value>
                <value>
                    <fullName>NOVALICHES</fullName>
                </value>
                <value>
                    <fullName>ROOSEVELT</fullName>
                </value>
                <value>
                    <fullName>STA. MARIA</fullName>
                </value>
                <value>
                    <fullName>VALENZUELA</fullName>
                </value>
                <value>
                    <fullName>ALABANG</fullName>
                </value>
                <value>
                    <fullName>BACOOR</fullName>
                </value>
                <value>
                    <fullName>BATANGAS</fullName>
                </value>
                <value>
                    <fullName>CALAMBA</fullName>
                </value>
                <value>
                    <fullName>DASMARIÑAS</fullName>
                </value>
                <value>
                    <fullName>LAS PIÑAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extensive_modifications_to_premises_requ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer needs major site modifications</description>
        <inlineHelpText>Customer needs major site modifications</inlineHelpText>
        <label>Customer needs major site modifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Findings_in_Free_Text__c</fullName>
        <description>FO Findings in free text for Mail Merge</description>
        <inlineHelpText>FO Findings in free text for Mail Merge</inlineHelpText>
        <label>Findings in Free Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <formula>Case__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_BC_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meter base for pickup at Business Center</description>
        <inlineHelpText>Meter base for pickup at Business Center</inlineHelpText>
        <label>Meter base for pickup at Business Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF( Case__r.Application_for_Residential_Customer__c = TRUE, Case__r.Full_Name_Concatenated__c ,  Case__r.Last_Name_Business_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inconsistent_SA_Data_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Info submitted needs further checking</description>
        <inlineHelpText>Info submitted needs further checking</inlineHelpText>
        <label>Info submitted needs further checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Instructions__c</fullName>
        <description>Instructions for inspection</description>
        <inlineHelpText>Instructions for inspection</inlineHelpText>
        <label>Inspection Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Result__c</fullName>
        <description>Result of inspection</description>
        <inlineHelpText>Result of inspection</inlineHelpText>
        <label>Inspection Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <description>Landmark and Directions</description>
        <formula>Case__r.Service_Address_Landmarks_Directions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landmark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landmarks__c</fullName>
        <formula>Case__r.Service_Address_Landmarks_Directions__c</formula>
        <label>Landmarks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Case__r.Last_Name_Business_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Service Wire Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Socket_Delivery_Instructions__c</fullName>
        <description>Instruction for meter socket delivery</description>
        <inlineHelpText>Instruction for meter socket delivery</inlineHelpText>
        <label>Meter Socket Delivery Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meter_Socket_Delivery__c</fullName>
        <description>Result of meter socket delivery</description>
        <inlineHelpText>Result of meter socket delivery</inlineHelpText>
        <label>Meter Socket Delivery Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metering_Scheme__c</fullName>
        <label>Metering Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NORMAL</fullName>
                </value>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>MULTI-METERING CENTER</fullName>
                </value>
                <value>
                    <fullName>ICP</fullName>
                </value>
                <value>
                    <fullName>MULTI-METERING PER FLOOR</fullName>
                </value>
                <value>
                    <fullName>SUBSTATION</fullName>
                </value>
                <value>
                    <fullName>PRIMARY METERING</fullName>
                </value>
                <value>
                    <fullName>20 KV</fullName>
                </value>
                <value>
                    <fullName>AMI-NORMAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <formula>Case__r.Mobile_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Retrieval__c</fullName>
        <label>Mode of Retrieval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REMOTE</fullName>
                </value>
                <value>
                    <fullName>ONSITE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Field Orders</relationshipLabel>
        <relationshipName>Field_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document to be picked up</description>
        <inlineHelpText>Document to be picked up</inlineHelpText>
        <label>Pick Up Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pole_Code__c</fullName>
        <label>Service Wire Pole #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Survey_Instructions__c</fullName>
        <description>Instructions for pre-survey</description>
        <inlineHelpText>Instructions for pre-survey</inlineHelpText>
        <label>Pre-Survey Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Survey_Result__c</fullName>
        <description>Result of pre-survey</description>
        <inlineHelpText>Result of pre-survey</inlineHelpText>
        <label>Survey Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feasible</fullName>
                </value>
                <value>
                    <fullName>Not Feasible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <formula>TEXT( Case__r.Service_Address_Province__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_Grant_for_SE_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need to secure Right of Way for SE Pole</description>
        <inlineHelpText>Need to secure Right of Way for SE Pole</inlineHelpText>
        <label>Need to secure Right of Way for SE Pole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Inspection_Result__c</fullName>
        <label>Re-Inspection Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_inspection_Instructions__c</fullName>
        <description>Instruction for re-inspection</description>
        <inlineHelpText>Instruction for re-inspection</inlineHelpText>
        <label>Re-inspection Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ready_for_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ready for connection</description>
        <inlineHelpText>Ready for connection</inlineHelpText>
        <label>Ready for Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <description>Date when pre-survey is resolved</description>
        <inlineHelpText>Date when pre-survey is resolved</inlineHelpText>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Remarks__c</fullName>
        <description>Resolution remark</description>
        <inlineHelpText>Resolution remark</inlineHelpText>
        <label>Resolution Remarks</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resp_Office__c</fullName>
        <label>Responsible Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Office__c</fullName>
        <description>Responsible Office</description>
        <formula>TEXT(Case__r.Responsible_Office__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Completion_Target_Negotiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SE Completion target negotiated</description>
        <inlineHelpText>SE Completion target negotiated</inlineHelpText>
        <label>SE Completion Target Negotiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Not_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service entrance needs correction</description>
        <inlineHelpText>Service entrance needs correction</inlineHelpText>
        <label>Service entrance needs correction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SE_Not_Installed_Yet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Found no service entrance on site</description>
        <inlineHelpText>Found no service entrance on site</inlineHelpText>
        <label>Found no service entrance on site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Length__c</fullName>
        <label>Service Wire Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>